--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
 </head>
-<body>
-    <h1>Ciclos e Iteraciones</h1>
+
+ <body>
+<h1> </h1>
  <script src="index.js" ></script>
+ <h1> Primera entrega obligatoria</h1>
 
     
-</body>
+   </body>
+
+
 </html>
