--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <body>
 <h1> </h1>
  <script src="index.js" ></script>
- <h1> Primera entrega obligatoria</h1>
+ <h1> Mi Agenda</h1>
 
     
    </body>
