--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css" />
     
 </head>
 
  <body>
 <h1> </h1>
- <script src="index.js" ></script>
- <h1> Primera entrega obligatoria</h1>
+ 
+ <h1> Clases de Automaquillaje</h1>
+ <h3>Detalle e informacion sobre nuestras clases de maquillaje social y artistico 💄:</h3>
+ <div id="contenedor-de-clases">   </div>
 
-    
-   </body>
+ <script src="index.js" ></script>
+ 
+
+    </body>
 
 
 </html>
