--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
  
  <h1> Clases de Automaquillaje</h1>
  <h3>Detalle e informacion sobre nuestras clases de maquillaje social y artistico 💄:</h3>
- <div id="contenedor-de-clases">   </div>
+
+ <section>
+    <div id="contenedor-de-clases"> 
+      <!-- <div class="contenedor-de-clase1">   </div>
+      <div class="contenedor-de-clases2">   </div> -->
+      
+    </div>
+</section>
 
 
  <script src="index.js" ></script>
