--- a/index.html
+++ b/index.html
@@ -7,24 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="./style.css" /> 
-    <script src="./index.js" defer></script>
-    <title>Repaso General</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta name="description" content="Maquillaje Profesional- Servicio y Clases de Automakeup">
+    <meta name="keywords" content="maquillaje, social, artistico, skincare, labiales, aprender, servicio">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+   />
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <title>Agenda BH.Makeup </title>
+    <link rel="shortcut icon" href="./imagenes/logo2 - Copy.png" class="imagenHeader"> 
 </head>
 
 <body>
-    <h1>Agenda de Turnos por Clienta</h1>
+    <div class="encabezadoHome"> 
+        <img src="./imagenes/logo2 - Copy.png" frameborder="" width="200" height="200" >
+        <h2> 
+            <p class="animate__animated animate__fadeInDownBig"><strong>Agenda BH.Makeup</strong></p>
+        </h2>
+    </div>
 
-    <form id="formulario-usuario">
+ <div>
+     <div class="mainForm" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
+      <h1>Agenda de Turnos por Clienta</h1>
+
+      <form id="formulario-usuario" action="index.html" method="post">
         <label for="user">Ingresar nombre de la clienta para ver su agenda personal</label>
-        <input id="user" type="text" placeholder="Nombre">
+        <input id="user" type="text" placeholder="Nombre" required>
         <input type="submit" value="Buscar">
-    </form>
-
-    <hr>
-
-    <div id="opciones"></div>
-    <ul id="listadodeTurnos">
-    </ul>
+      </form>
+     </div>
+      <div id="opciones"></div>
+      <ul id="listadodeTurnos">
+      </ul>
+    </div>
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="./index.js" defer></script>
 
 </body>
 
